@@ -1,8 +1,14 @@
 ------------------------------------------------------------------------
-r312 | funkehdude | 2024-09-25 15:58:20 +0000 (Wed, 25 Sep 2024) | 1 line
+r322 | funkehdude | 2025-04-23 16:05:47 +0000 (Wed, 23 Apr 2025) | 1 line
 Changed paths:
-   M /trunk/!BugGrabber.toc
+   M /trunk/.luacheckrc
 
-bump toc
+Update luacheck
+------------------------------------------------------------------------
+r321 | funkehdude | 2025-04-23 15:55:55 +0000 (Wed, 23 Apr 2025) | 1 line
+Changed paths:
+   M /trunk/BugGrabber.lua
+
+Fix LUA_WARNING handling as of WoW 11.1.5
 ------------------------------------------------------------------------
 
